[gd_scene load_steps=12 format=3 uid="uid://cqubu87pvq7nq"]

[ext_resource type="Script" path="res://src/scenes/main_menu/main_menu.gd" id="1_j8h2n"]
[ext_resource type="Texture2D" uid="uid://brx3islm3co4a" path="res://assets/guinea_pig/long-noswirls-cream.png" id="1_jpkbo"]
[ext_resource type="Texture2D" uid="uid://byce8jnxkp1ut" path="res://assets/guinea_pig/short-noswirls-cream.png" id="2_vhy0n"]
[ext_resource type="Texture2D" uid="uid://5pcbctx21bet" path="res://assets/guinea_pig/short-swirls-white.png" id="3_7fr3p"]
[ext_resource type="FontFile" uid="uid://djw4x7uisd0rl" path="res://assets/font/Aptos.ttf" id="4_lr2ss"]
[ext_resource type="PackedScene" uid="uid://cofx5ldtfg6uf" path="res://src/scenes/how_to_play/how_to_play.tscn" id="6_5cn4s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_urxpa"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0u5ps"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3s41"]
bg_color = Color(0.884037, 0.884037, 0.884037, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s4rfe"]
bg_color = Color(0.764706, 0.764706, 0.764706, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cwkj3"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j8h2n")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_urxpa")

[node name="guinea-pig-1" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -823.0
offset_top = -984.0
offset_right = -223.0
offset_bottom = -534.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_jpkbo")

[node name="guinea-pig-2" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 55.0
offset_top = -541.0
offset_right = 655.0
offset_bottom = -91.0
grow_vertical = 0
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_vhy0n")
flip_h = true

[node name="guinea-pig-3" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1662.0
offset_top = -60.0
offset_right = -1062.0
offset_bottom = 390.0
grow_horizontal = 0
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_7fr3p")
flip_h = true

[node name="lblTitle_Genetic" type="Label" parent="."]
layout_mode = 2
offset_left = 150.0
offset_top = 310.0
offset_right = 1000.0
offset_bottom = 616.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_lr2ss")
theme_override_font_sizes/font_size = 250
text = "Genetic"

[node name="lblTitle_Shuffle" type="Label" parent="."]
layout_mode = 2
offset_left = 879.0
offset_top = 498.0
offset_right = 1645.0
offset_bottom = 804.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_lr2ss")
theme_override_font_sizes/font_size = 250
text = "Shuffle"

[node name="btnStart" type="Button" parent="."]
layout_mode = 2
offset_left = 829.0
offset_top = 792.0
offset_right = 1329.0
offset_bottom = 992.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_lr2ss")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_0u5ps")
theme_override_styles/hover = SubResource("StyleBoxFlat_u3s41")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s4rfe")
theme_override_styles/normal = SubResource("StyleBoxFlat_cwkj3")
text = "Start"

[node name="btnHowToPlay" type="Button" parent="."]
layout_mode = 2
offset_left = 1353.0
offset_top = 792.0
offset_right = 1853.0
offset_bottom = 992.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_lr2ss")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_0u5ps")
theme_override_styles/hover = SubResource("StyleBoxFlat_u3s41")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s4rfe")
theme_override_styles/normal = SubResource("StyleBoxFlat_cwkj3")
text = "  How to play  "

[node name="HowToPlay" parent="." instance=ExtResource("6_5cn4s")]
visible = false
layout_mode = 1
